# src/user/dto/user-setting-request.dto.ts
@@ -1,0 +1,5 @@
+export class SettingRequestDto {
+  birthDate: string;
+  nickname: string;
+  sex: string;
+}
